--- a/404.md
+++ b/404.md
@@ -12,4 +12,4 @@ The page you're looking for doesn't exist.
 
 ---
 
-**Languages:** [English](/) | [中文](/zh) | [日本語](/ja) | [Français](/fr) | [Deutsch](/de) | [Español](/es) | [Русский](/ru) | [한국어](/ko) | [Português](/pt) | [Italiano](/it) | [العربية](/ar)
+**Languages:** [English](./index.html) | [中文](./zh.html) | [日本語](./ja.html) | [Français](./fr.html) | [Deutsch](./de.html) | [Español](./es.html) | [Русский](./ru.html) | [한국어](./ko.html) | [Português](./pt.html) | [Italiano](./it.html) | [العربية](./ar.html)
